Se agregó sonido. También se agregaron subtitulos al video de presentación. Se modificó el archivo README.md

--- a/index.html
+++ b/index.html
@@ -97,16 +97,23 @@
                     <video controls muted autoplay loop poster="" class="video">
                         <source src="./media/videos/cataratas.mp4" type="video/mp4">
                         Tu navegador no soporta la reproducción de video.
-                            <track src="./media/videos/subt_catig.vtt"
+                            <track src="./media/videos/cataratas.vtt"
                                         kind="subtitles"
                                             srclang="es"
                                                 label="Español"
                                                     default />
-                                                        <track src="./media/videos/subt_catig.vtt"
+                                                        <track src="./media/videos/cataratas.vtt"
                                                             kind="subtitles"
                                                                 srclang="en"
                                                                     label="Inglés" />
                     </video>
+                    <br />
+                    <div class="audio">
+                        <audio controls muted>
+                            <source src="./media/sonidos/waterfall-sounds.mp3" type="audio/mpeg">
+                            Tu navegador no soporta la reproducción de audio.
+                        </audio>
+                    </div>
                     <h1 class="heading"><span>LOS</span> <span>MEJORES</span> <span>LUGARES</span> <span>DE</span> <span>ARGENTINA</span></h1>
                     <p>Buscas salir de tu rutina? Escapate a alguno de estos fantásticos lugares.<br />
                         <span>Vive aventuras emocionantes e inigualables. Crea recuerdos inolvidables!</span>
@@ -225,8 +232,6 @@
                             <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
-                        
-
                         <div class="box">
                             <img src="./media/imgs/photos/mend00.jpg" alt="Imagen de Mendoza">
                             <div class="content">
@@ -286,7 +291,7 @@
                                 <p>(Reviews: 1044)</p>
                             </div>
                             <div class="price">5 Noches - Desde: $379.000 / pers. Antes: <span>$349.000 / pers</span> </div>
-                            <a href="#book" class="btn">Book now</a>
+                            <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
 
