--- a/xtras/privacidad.html
+++ b/xtras/privacidad.html
@@ -77,9 +77,9 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="./xtras/nosotros.html">Nosotros</a></li>
-                                    <li><a class="dropdown-item" href="#servicios">Servicios</a></li>
-                                    <li><a class="dropdown-item" href="#">Galeria</a></li>
-                                    <li><a class="dropdown-item" href="#">Testimonios</a></li>
+                                    <li><a class="dropdown-item" href="../index.html#servicios">Servicios</a></li>
+                                    <li><a class="dropdown-item" href="../index.html#revygal">Galeria</a></li>
+                                    <li><a class="dropdown-item" href="../index.html#revygal">Reseñas</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -92,63 +92,63 @@
             </nav>
         </header>
 <main>
-    <h2 style="margin-top: 150px;">Políticas de privacidad</h2>
-<p>TravelARG  respeta tu derecho de privacidad y se compromete a cumplir con las leyes de privacidad y protección de la información.
+    <h2 style="margin-top: 100px;">Políticas de privacidad</h2>
+<p>XcapARG  respeta tu derecho de privacidad y se compromete a cumplir con las leyes de privacidad y protección de la información.
 </p>
 
 <p>Este apartado explica nuestra política con respecto a la recolección, uso y revelado de la información personal. Esta política puede llegar a ser modificada conforme se actualicen y expandan nuestros productos y servicios brindados. Por este motivo, por favor referirse a este apartado periódicamente.
 </p>
-<p>Al acceder o utilizar el sitio web de TravelARG, usted está aceptando nuestras prácticas de uso de la información.
+<p>Al acceder o utilizar el sitio web de XcapARG, usted está aceptando nuestras prácticas de uso de la información.
 </p>
 
 <h3>Recolección de la Información Personal</h3>
-<p>TravelARG recolecta información personal que es necesaria para brindar y personalizar nuestro servicio brindado y nuestros esfuerzos de marketing. Esta información incluye su ciudad y dirección de e-mail. Si usted envía una carta o e-mail con información personal, es probable que recolectemos esa información. También es posible que recolectemos información de sus preferencias, como clicks en los links de los mails o de nuestro sitio web. Cualquier información personal que usted nos provea y/o que nosotros obtuviéramos de su parte, se mantendrá de manera segura y confidencial.
+<p>XcapARG recolecta información personal que es necesaria para brindar y personalizar nuestro servicio brindado y nuestros esfuerzos de marketing. Esta información incluye su ciudad y dirección de e-mail. Si usted envía una carta o e-mail con información personal, es probable que recolectemos esa información. También es posible que recolectemos información de sus preferencias, como clicks en los links de los mails o de nuestro sitio web. Cualquier información personal que usted nos provea y/o que nosotros obtuviéramos de su parte, se mantendrá de manera segura y confidencial.
 </p>
 
-<p>Cuando se conecta a TravelARG mediante un servicio de terceros, como Facebook o X, TravelARG recolecta su información de ese servicio como su nombre, dirección de correo electrónico, dirección y otra información disponible según lo permitido por ese servicio. La información que recolectamos de los servicios de terceros depende de las preferencias de privacidad que usted tenga con los servicios de terceros. Por ejemplo, al conectarse vía Facebook, usted está autorizando a TravelARG a acceder a su información personal de su cuenta de  de conformidad con los Términos de uso de Facebook con respecto a su uso del servicio a través de Facebook.
+<p>Cuando se conecta a XcapARG mediante un servicio de terceros, como Facebook o X, XcapARG recolecta su información de ese servicio como su nombre, dirección de correo electrónico, dirección y otra información disponible según lo permitido por ese servicio. La información que recolectamos de los servicios de terceros depende de las preferencias de privacidad que usted tenga con los servicios de terceros. Por ejemplo, al conectarse vía Facebook, usted está autorizando a XcapARG a acceder a su información personal de su cuenta de  de conformidad con los Términos de uso de Facebook con respecto a su uso del servicio a través de Facebook.
 </p>
 
-<p>Cuando usted visita TravelARG, ya sea como usuario registrado o un usuario no registrado, nuestros servidores registran automáticamente los datos que su navegador envía cada vez que visita un sitio web. Este registro de datos puede incluir información como el tipo de navegador o la página web que se visita antes de acceder a nuestro servicio, las páginas de nuestro servicio que usted visita, el tiempo empleado en esas páginas, y fechas, y otras estadísticas. Utilizamos esta información para monitorear y analizar el uso del servicio y la administración técnica del Servicio, para aumentar la funcionalidad de nuestro servicio y facilidad de uso, y para adaptar mejor nuestro servicio a las necesidades de nuestros visitantes.
+<p>Cuando usted visita XcapARG, ya sea como usuario registrado o un usuario no registrado, nuestros servidores registran automáticamente los datos que su navegador envía cada vez que visita un sitio web. Este registro de datos puede incluir información como el tipo de navegador o la página web que se visita antes de acceder a nuestro servicio, las páginas de nuestro servicio que usted visita, el tiempo empleado en esas páginas, y fechas, y otras estadísticas. Utilizamos esta información para monitorear y analizar el uso del servicio y la administración técnica del Servicio, para aumentar la funcionalidad de nuestro servicio y facilidad de uso, y para adaptar mejor nuestro servicio a las necesidades de nuestros visitantes.
 </p>
 
 <h3>Uso de la Información por otras Páginas de Internet</h3>
-<p>TravelARG utiliza links a otras páginas externas cuyas políticas pueden llegar a diferir de las nuestras. TravelARG no guarda responsabilidad por las políticas de privacidad o contenido de estos sitios, operados y gerenciados por otras empresas. El hecho de que existan links a otros sitios web no es una aprobación, autorización o representación de TravelARG con ese tercero, ni tampoco es un aval de su privacidad.
+<p>XcapARG utiliza links a otras páginas externas cuyas políticas pueden llegar a diferir de las nuestras. XcapARG no guarda responsabilidad por las políticas de privacidad o contenido de estos sitios, operados y gerenciados por otras empresas. El hecho de que existan links a otros sitios web no es una aprobación, autorización o representación de XcapARG con ese tercero, ni tampoco es un aval de su privacidad.
 </p>
 <h3>Revelado de la Información Personal</h3>
-<p>TravelARG no venderá ni alquilará su información personal a una tercera parte sin su consentimiento explícito.
+<p>XcapARG no venderá ni alquilará su información personal a una tercera parte sin su consentimiento explícito.
 </p>
-<p>TravelARG podría llegar a revelar información personal en respuesta a requerimientos legales o en situaciones que involucran un riesgo potencial a la seguridad física o la propiedad de las personas.
+<p>XcapARG podría llegar a revelar información personal en respuesta a requerimientos legales o en situaciones que involucran un riesgo potencial a la seguridad física o la propiedad de las personas.
 </p>
-<p>TravelARG también podría llegar a revelar información personal con otras compañías, agentes o contratistas para desarrollar servicios en nombre de nuestra empresa. Esto incluye empresas de mailing. Estas compañías solo pueden hacer uso de la información personal con el propósito de proveer el servicio que TravelARG les solicita.
+<p>XcapARG también podría llegar a revelar información personal con otras compañías, agentes o contratistas para desarrollar servicios en nombre de nuestra empresa. Esto incluye empresas de mailing. Estas compañías solo pueden hacer uso de la información personal con el propósito de proveer el servicio que XcapARG les solicita.
 </p>
-<p>En el caso que TravelARG sea adquirida o se fusione con una tercera parte, la nueva entidad deberá respetar esta política de privacidad con respecto a la información personal. Si la información personal es utilizada en forma contraria a lo mencionado en este apartado, usted recibirá un aviso al respecto y la información personal solo será utilizada si se obtiene su consentimiento explícito.
+<p>En el caso que XcapARG sea adquirida o se fusione con una tercera parte, la nueva entidad deberá respetar esta política de privacidad con respecto a la información personal. Si la información personal es utilizada en forma contraria a lo mencionado en este apartado, usted recibirá un aviso al respecto y la información personal solo será utilizada si se obtiene su consentimiento explícito.
 </p>
 <h3>Recolección y uso de la Información Técnica</h3>
-<p>Es posible que se haga una recolección y almacenamiento de cierta información técnica sobre su visita al sitio web de TravelARG, como por ejemplo
+<p>Es posible que se haga una recolección y almacenamiento de cierta información técnica sobre su visita al sitio web de XcapARG, como por ejemplo
 <ul>
     <li>dirección IP desde la cual accede,</li>
     <li>tipo de navegador y sistema operativo que utiliza,</li>
     <li>fecha y hora de su visita,</li>
     <li>su actividad a través de la página (por ejemplo las páginas a las que accedió), y</li>
-    <li>la dirección de Internet desde la cual accedió a la página de TravelARG.</li>
+    <li>la dirección de Internet desde la cual accedió a la página de XcapARG.</li>
 </ul>
 
 <p>La información técnica que se recolecta no se utilizará para identificar a visitantes de la página. La información técnica se usa únicamente para analizar tendencias, administrar y mejorar nuestro sitio web, medir el tráfico y los patrones de navegación dentro de la página y generar estadísticas acerca de las visitas a nuestro sitio web.
 aval de su privacidad.</p>
 <h3>Almacenamiento y protección de su información</h3>
-<p>Nos preocupamos por la seguridad de su información. Utilizamos medidas de seguridad comercialmente razonables para preservar la integridad y seguridad de la información recopilada y mantenida a través de TravelARG. Sin embargo, no podemos asegurar o garantizar la seguridad de cualquier información que usted nos proporciona ni garantiza que la información no pueda ser accedida, alterada o destruida por personas no autorizadas.
+<p>Nos preocupamos por la seguridad de su información. Utilizamos medidas de seguridad comercialmente razonables para preservar la integridad y seguridad de la información recopilada y mantenida a través de XcapARG. Sin embargo, no podemos asegurar o garantizar la seguridad de cualquier información que usted nos proporciona ni garantiza que la información no pueda ser accedida, alterada o destruida por personas no autorizadas.
 aval de su privacidad</p>
 <h3>Comunicaciones</h3>
-<p>Nosotros utilizamos su información personal para enviarle promociones y cualquier otra información que pueda ser de su interés. Si usted decide en cualquier momento que usted ya no desea recibir tales comunicaciones de TravelARG, por favor siga las instrucciones para cancelar la suscripción en cualquiera de las comunicaciones o actualizar sus 'preferencias' en la información de su cuenta. Nunca solicitamos la información de su tarjeta de crédito, información de acceso o números de identificación nacional en una comunicación por correo electrónico o por teléfono.
+<p>Nosotros utilizamos su información personal para enviarle promociones y cualquier otra información que pueda ser de su interés. Si usted decide en cualquier momento que usted ya no desea recibir tales comunicaciones de XcapARG, por favor siga las instrucciones para cancelar la suscripción en cualquiera de las comunicaciones o actualizar sus 'preferencias' en la información de su cuenta. Nunca solicitamos la información de su tarjeta de crédito, información de acceso o números de identificación nacional en una comunicación por correo electrónico o por teléfono.
 </p>
 <h3>Herramientas sociales</h3>
-<p>Usted tiene la opción de importar los contactos personales (incluyendo direcciones de correo electrónico de las listas de amigos a través de sistemas de terceros) de modo que usted pueda encontrar a sus amigos que utilizan TravelARG y pueda invitar a sus amigos a que se unan a TravelARG, y sus amigos puedan encontrarlo a usted. Como parte del Servicio, usted puede comunicarse con otros usuarios registrados y no registrados, a través de TravelARG. Cuando usted elige la opción de añadir una o más direcciones de correo electrónico a un formulario en línea, el mensaje que escriba en la plantilla será enviado desde TravelARG a las direcciones de correo electrónico que usted ingresa.
+<p>Usted tiene la opción de importar los contactos personales (incluyendo direcciones de correo electrónico de las listas de amigos a través de sistemas de terceros) de modo que usted pueda encontrar a sus amigos que utilizan XcapARG y pueda invitar a sus amigos a que se unan a XcapARG, y sus amigos puedan encontrarlo a usted. Como parte del Servicio, usted puede comunicarse con otros usuarios registrados y no registrados, a través de XcapARG. Cuando usted elige la opción de añadir una o más direcciones de correo electrónico a un formulario en línea, el mensaje que escriba en la plantilla será enviado desde XcapARG a las direcciones de correo electrónico que usted ingresa.
 </p>
 <h3>Cookies</h3>
-<p>Al igual que muchos servicios, TravelARG utiliza cookies para recoger información. Una cookie es un pequeño archivo de datos que se transfiere a su ordenador o disco duro del dispositivo móvil. TravelARG utiliza cookies para guardar su información de acceso para las conexiones futuras en el servicio. Usted puede configurar su navegador para que no acepte cookies o para que le avise antes de aceptar una cookie de los sitios web que visita. Sin embargo, si usted no acepta las cookies no será capaz de utilizar todas las partes del servicio o todas las funcionalidades de TravelARG.
+<p>Al igual que muchos servicios, XcapARG utiliza cookies para recoger información. Una cookie es un pequeño archivo de datos que se transfiere a su ordenador o disco duro del dispositivo móvil. XcapARG utiliza cookies para guardar su información de acceso para las conexiones futuras en el servicio. Usted puede configurar su navegador para que no acepte cookies o para que le avise antes de aceptar una cookie de los sitios web que visita. Sin embargo, si usted no acepta las cookies no será capaz de utilizar todas las partes del servicio o todas las funcionalidades de XcapARG.
 </p>
 <h3>Contacto</h3>
-<p>Ante cualquier consulta o comentario relacionados con nuestras políticas de privacidad, por favor contactarse a privacidad@TravelARG.com</p>
+<p>Ante cualquier consulta o comentario relacionados con nuestras políticas de privacidad, por favor contactarse a privacidad@XcapARG.com</p>
 </p>
 <a href="#" class="">Volver</a>
 </main>
