--- a/xtras/terminos.html
+++ b/xtras/terminos.html
@@ -7,49 +7,49 @@
 </head>
 <body>
     <h1>Términos y Condiciones</h1>
-<p>Este documento describe los términos y condiciones (los "Términos y Condiciones ") aplicables al acceso y uso de los servicios dentro del sitio https://www.TravelARG.com.ar (el "Sitio").
+<p>Este documento describe los términos y condiciones (los "Términos y Condiciones ") aplicables al acceso y uso de los servicios dentro del sitio https://www.XcapARG.com.ar (el "Sitio").
 </p>
 <h3>Autorización</h3>
-<p>Cuando el Usuario accede al Sitio o lo utiliza de alguna manera, está aceptando nuestro Términos y Condiciones. TravelARG podrá adaptar estos Términos y Condiciones. Usted puede revisar en esta página los cambios realizados en nuestros Términos y Condiciones.
+<p>Cuando el Usuario accede al Sitio o lo utiliza de alguna manera, está aceptando nuestro Términos y Condiciones. XcapARG podrá adaptar estos Términos y Condiciones. Usted puede revisar en esta página los cambios realizados en nuestros Términos y Condiciones.
 </p>
 <h3>Descripción del Servicio</h3>
-<p>Nuestro servicio le brinda al Usuario un motor de búsqueda de información para ayudar a los Usuarios a planificar sus viajes. TravelARG le brinda al usuario una lista de hoteles, vuelos, paquetes y ofertas turísticas en diversos destinos turísticos, con información sobre tarifas, condiciones de reserva, características, disponibilidad y fechas, de acuerdo a los datos obtenidos en sitios de terceros, sitios de hoteles, agencias de viajes nacionales e internacionales, compañías aéreas y operadores externos. En caso que el Usuario manifieste intención de efectuar una reserva en un hotel, vuelo, paquete u oferta turística en particular, TravelARG le ofrece un hipervínculo que dirige al usuario a la página web de la empresa responsable del suministro.
+<p>Nuestro servicio le brinda al Usuario un motor de búsqueda de información para ayudar a los Usuarios a planificar sus viajes. XcapARG le brinda al usuario una lista de hoteles, vuelos, paquetes y ofertas turísticas en diversos destinos turísticos, con información sobre tarifas, condiciones de reserva, características, disponibilidad y fechas, de acuerdo a los datos obtenidos en sitios de terceros, sitios de hoteles, agencias de viajes nacionales e internacionales, compañías aéreas y operadores externos. En caso que el Usuario manifieste intención de efectuar una reserva en un hotel, vuelo, paquete u oferta turística en particular, XcapARG le ofrece un hipervínculo que dirige al usuario a la página web de la empresa responsable del suministro.
 </p>
 <p>El propósito de nuestro servicio es únicamente informativo.</p>
 
 <h3>Hipervínculos</h3>
-<p>Nuestro sitio puede contener hipervínculos o conexiones a sitios de terceros, exclusivamente para su información y conveniencia, respecto a los cuales TravelARG no se responsabiliza por sus políticas o su contenido. El ingreso y uso de estos sitios se hace exclusivamente por cuenta propia y a riesgo de los Usuarios. TravelARG no es en ningún momento parte contractual de los servicios para el usuario final.
+<p>Nuestro sitio puede contener hipervínculos o conexiones a sitios de terceros, exclusivamente para su información y conveniencia, respecto a los cuales XcapARG no se responsabiliza por sus políticas o su contenido. El ingreso y uso de estos sitios se hace exclusivamente por cuenta propia y a riesgo de los Usuarios. XcapARG no es en ningún momento parte contractual de los servicios para el usuario final.
 </p>
-<p>TravelARG se reserva el derecho de agregar y/o eliminar cualquier link o conexión a un sitio de terceras entidades, en cualquier momento, sin aviso previo ni expresión de causa.
+<p>XcapARG se reserva el derecho de agregar y/o eliminar cualquier link o conexión a un sitio de terceras entidades, en cualquier momento, sin aviso previo ni expresión de causa.
 </p>
-<p>TravelARG no representa, ni aprueba la precisión, legalidad, legitimación, validez y confianza de los productos y servicios, sugerencias, y recomendaciones de los sitios de terceros.
+<p>XcapARG no representa, ni aprueba la precisión, legalidad, legitimación, validez y confianza de los productos y servicios, sugerencias, y recomendaciones de los sitios de terceros.
 </p>
 <p>Los hipervínculos a sitios de terceros, referencias, marcas, productos y servicios de terceros o información no constituyen o implican nuestra representación, patrocinio o aprobación de los terceros, ni de la calidad de sus productos y/o servicios.
 </p>
 <h3>Publicaciones</h3>
-<p>TravelARG no tiene control sobre la información provista por sitios de terceros. Esta información puede contener errores ortográficos o errores técnicos.
+<p>XcapARG no tiene control sobre la información provista por sitios de terceros. Esta información puede contener errores ortográficos o errores técnicos.
 </p>
-<p>TravelARG no garantiza, ni se hace responsable, de la precisión de la información presentada incluyendo la moneda, la calidad, el cumplimiento de la propiedad intelectual o la legalidad de la misma.
+<p>XcapARG no garantiza, ni se hace responsable, de la precisión de la información presentada incluyendo la moneda, la calidad, el cumplimiento de la propiedad intelectual o la legalidad de la misma.
 </p>
 <h3>Propiedad Intelectual</h3>
-<p>TravelARG se reserva todos los derechos de Propiedad intelectual y demás derechos sobre el servicio así como sobre los contenidos publicados, informaciones, imágenes, videos y bancos de datos. Por ello, está expresamente prohibida cualquier modificación, reproducción, publicación, transmisión a terceros y/o demás uso o explotación de la propiedad protegida sin el consentimiento previo por escrito de TravelARG.
+<p>XcapARG se reserva todos los derechos de Propiedad intelectual y demás derechos sobre el servicio así como sobre los contenidos publicados, informaciones, imágenes, videos y bancos de datos. Por ello, está expresamente prohibida cualquier modificación, reproducción, publicación, transmisión a terceros y/o demás uso o explotación de la propiedad protegida sin el consentimiento previo por escrito de XcapARG.
 </p>
-<p>TravelARG respeta la propiedad intelectual de otros. Si usted sabe o sospecha que cualquier uso del Servicio consituye un incumplimiento de la propiedad intelectual, por favor notifique al departamento de soporte de TravelARG vía e-mail a legales@TravelARG.com.
+<p>XcapARG respeta la propiedad intelectual de otros. Si usted sabe o sospecha que cualquier uso del Servicio consituye un incumplimiento de la propiedad intelectual, por favor notifique al departamento de soporte de XcapARG vía e-mail a legales@XcapARG.com.
 </p>
 <h3>Privacidad</h3>
 <p>Nos importa la privacidad y seguridad de nuestros usuarios. Al utilizar nuestro servicio, usted nos da consentimiento a recolectar y utilizar su información conforme a lo establecido en nuestra Política de Privacidad.
 </p>
 <h3>Usos no permitidos</h3>
-<p>No está permitida ninguna acción o uso de dispositivo, software, u otro medio tendiente a interferir tanto en las actividades y operatoria de TravelARG como en las bases de datos de TravelARG. Cualquier intromisión, tentativa o actividad violatoria o contraria a las leyes sobre derecho de propiedad intelectual y/o a las prohibiciones estipuladas en este contrato harán pasible a su responsable de las acciones legales pertinentes, y a las sanciones previstas por este acuerdo, así como lo hará responsable de indemnizar los daños ocasionados.
+<p>No está permitida ninguna acción o uso de dispositivo, software, u otro medio tendiente a interferir tanto en las actividades y operatoria de XcapARG como en las bases de datos de XcapARG. Cualquier intromisión, tentativa o actividad violatoria o contraria a las leyes sobre derecho de propiedad intelectual y/o a las prohibiciones estipuladas en este contrato harán pasible a su responsable de las acciones legales pertinentes, y a las sanciones previstas por este acuerdo, así como lo hará responsable de indemnizar los daños ocasionados.
 </p>
 <p>No está permitido decriptar o hacer ingeniería inversa del Sitio, o romper, alterar o interferir con el Servicio. Todo Usuario será legalmente responsable de las siguientes conductas: a) Uso incorrecto del sitio o de la información que contenga; b) Uso con fines o efectos ilícitos del sitio, sus servicios o de la información que contenga; c) Causar inutilización, demora, deterioro o daño al sitio, sus servicios o a la información que contenga; d) Reproducción total o parcial, comercialización, distribución, publicación o modificación no autorizada de información.
 </p>
 <h3>Exclusión de responsabilidad</h3>
-<p>TravelARG no es responsable por daños y/o perjuicios directos o indirectos causados por cualquier adición o alteración efectuada a la página web y/o software realizado por los Usuarios o terceras partes y que no sean aprobados por TravelARG.
+<p>XcapARG no es responsable por daños y/o perjuicios directos o indirectos causados por cualquier adición o alteración efectuada a la página web y/o software realizado por los Usuarios o terceras partes y que no sean aprobados por XcapARG.
 </p>
-<p>Es obligación de los usuarios contar con antivirus adecuados, antispyware y en general con todos los mecanismos necesarios para proteger los datos e información computacional. TravelARG no será responsable por la seguridad técnica, calidad y funcionamiento de los antivirus/antispyware y fiabilidad de las comunicaciones efectuadas a través de aparatos, redes, terminales o equipos.
+<p>Es obligación de los usuarios contar con antivirus adecuados, antispyware y en general con todos los mecanismos necesarios para proteger los datos e información computacional. XcapARG no será responsable por la seguridad técnica, calidad y funcionamiento de los antivirus/antispyware y fiabilidad de las comunicaciones efectuadas a través de aparatos, redes, terminales o equipos.
 </p>
-<p>TravelARG procura que la información contenida en su sitio web sea completa, exacta y actualizada. Sin embargo, no está en condiciones de garantizar dicha integridad, exactitud o vigencia de toda la información ofrecida.
+<p>XcapARG procura que la información contenida en su sitio web sea completa, exacta y actualizada. Sin embargo, no está en condiciones de garantizar dicha integridad, exactitud o vigencia de toda la información ofrecida.
 </p>
 <p>Por ello, no garantiza un servicio libre de errores e ininterrumpido y no será responsable bajo ninguna circunstancia por eventuales daños y/o perjuicios directos o indirectos que puedan derivarse de su uso, por errores o inexactitudes de la información contenida en él, ni respecto de interrupciones, demoras, virus o fallas del sistema.
 </p>
