Se agregó el ícono de la empresa en la solapa del navegador en todas las páginas

--- a/xtras/terminos.html
+++ b/xtras/terminos.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- ICONO DE LA EMPRESA EN LA SOLAPA DEL NAVEGADOR -->
+    <link rel="shortcut icon" href="../media/imgs/icons/agencia.ico" type="image/x-icon">
+
     <title>Términos y Condiciones</title>
 </head>
 <body>
