--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <!-- ICONO DE CODO A CODO EN LA SOLAPA DEL NAVEGADOR -->
-        <link rel="shortcut icon" href="" type="image/x-icon">
+        <!-- ICONO DE LA EMPRESA EN LA SOLAPA DEL NAVEGADOR -->
+        <link rel="shortcut icon" href="./media/imgs/icons/agencia.ico" type="image/x-icon">
 
         <!-- BOOTSTRAP -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -294,7 +294,7 @@
                             <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
-
+./
                     <div class="box">
                         <img src="./media/imgs/photos/usu00.jpg" alt="Imagen de Usuahia">
                         <div class="content">
