Chequeo funcionamiento de los links entre todas las páginas

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
     <head>
         <!-- METADATOS -->
         <meta charset="UTF-8">
@@ -277,10 +276,9 @@
 
                     <div class="box">
                         <img src="./media/imgs/photos/saju00.jpg" alt="Imagen de Jujuy">
-                        <div class="content">
-                            <h3><i class="fas fa-map-marker-alt"></i> Salta / Jujuy</h3>
-                            <p>En el noroeste argentino, se destacan por su riqueza cultural, paisajes imponentes y fuerte herencia indígena y colonial. Gran gastronomia y una vibrante vida cultural.</p>
-                            <div class="reviews">
+                            <div class="content">
+                                <h3><i class="fas fa-map-marker-alt"></i> Salta / Jujuy</h3>
+                                <p>En el noroeste argentino, se destacan por su riqueza cultural, paisajes imponentes y fuerte herencia indígena y colonial. Gran gastronomia y una vibrante vida cultural.</p>                           <div class="reviews">
                                 <div class="stars">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -294,7 +292,6 @@
                             <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
-./
                     <div class="box">
                         <img src="./media/imgs/photos/usu00.jpg" alt="Imagen de Usuahia">
                         <div class="content">
@@ -620,7 +617,7 @@
                         <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px; font-size: 1.2rem;">Contacto</h5>
                         <p style="font-size: 1rem;"><i class="fa fa-map-marker-alt mr-2"></i>  Ciudad de Buenos Aires, Argentina</p>
                         <p style="font-size: 1rem;"><i class="fa fa-phone-alt mr-2"></i>  +54 9 11 47865432</p>
-                        <p style="font-size: 1rem;"><i class="fa fa-envelope mr-2"></i>  contacto@xcaparg.com</p>
+                        <p style="font-size: 1rem;"><i class="fa fa-envelope mr-2"></i>  <a href="mailto:contacto@xcaparg.com.ar">contacto@xcaparg.com</a></p>
                     </div>  
                     
                     <div class="col-lg-3 col-md-6 mb-5">
@@ -644,13 +641,13 @@
                 <div class="legales">
                     <div>
                         <p class="m-0 text-white-50" id="defensa-nac">
-                            Defensa del consumidor. Para reclamos ingrese 
-                                <a href="https://autogestion.produccion.gob.ar/consumidores">aquí.</a>
+                            Defensa del consumidor. Reclamos  
+                                <a href="https://autogestion.produccion.gob.ar/consumidores">aquí</a>-
                         </p>
                     </div> 
                     <div>   
                         <p class="m-0 text-white-50" id="defensa-caba">
-                            Dirección General de defensa y protección al consumidor CABA. Para consultas y/o denuncias ingrese
+                             |-  Dirección General de defensa y protección al consumidor CABA. Consultas y/o denuncias
                                 <a href="https://buenosaires.gob.ar/gobierno/atencion-ciudadana/defensa-al-consumidor">aquí</a>
                         </p>
                     </div>
@@ -664,7 +661,7 @@
                 </div> 
                 
                 <div class="designer">
-                    <p class="m-0 text-white-50">- Diseñado por Marozta para Talento Tech: <a href="https://github.com"> github</a></p>
+                    <p class="m-0 text-white-50">- Diseñado por Marozta para Talento Tech</p>
                 </div>
             </div>
 
