--- a/xtras/contacto.html
+++ b/xtras/contacto.html
@@ -188,13 +188,13 @@
                 <div class="legales">
                     <div>
                         <p class="m-0 text-white-50" id="defensa-nac">
-                            Defensa del consumidor. Para reclamos ingrese 
-                                <a href="https://autogestion.produccion.gob.ar/consumidores">aquí.</a>
+                            Defensa del consumidor. Reclamos: 
+                                <a href="https://autogestion.produccion.gob.ar/consumidores">aquí</a>
                         </p>
                     </div> 
                     <div>   
                         <p class="m-0 text-white-50" id="defensa-caba">
-                            Dirección General de defensa y protección al consumidor CABA. Para consultas y/o denuncias ingrese
+                            - | - Dirección General de defensa y protección al consumidor CABA. Para consultas y/o denuncias:
                                 <a href="https://buenosaires.gob.ar/gobierno/atencion-ciudadana/defensa-al-consumidor">aquí</a>
                         </p>
                     </div>
@@ -208,7 +208,7 @@
                 </div> 
                 
                 <div class="designer">
-                    <p class="m-0 text-white-50">Diseñado por Marozta para Talento Tech: <a href="https://github.com"> github</a></p>
+                    <p class="m-0 text-white-50">Diseñado por Marozta para Talento Tech</p>
                 </div>
             </div>
         </footer>
