Arreglo de links en la barra de navegación superior

--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="./xtras/nosotros.html">Nosotros</a></li>
                                     <li><a class="dropdown-item" href="#servicios">Servicios</a></li>
-                                    <li><a class="dropdown-item" href="#revygal">Galeria</a></li>
-                                    <li><a class="dropdown-item" href="#revygal">Reseñas</a></li>
+                                    <li><a class="dropdown-item" href="#resenas">Reseñas</a></li>
+                                    <li><a class="dropdown-item" href="#galeria">Galeria</a></li>
+                                    
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -431,7 +432,7 @@
                 </div>
             </section>
             <!--  SECCION RESEÑAS  -->
-            <section class="reviews">
+            <section class="reviews" id="resenas" >
 
                 <h1 class="heading">
                     <span>R</span>
@@ -442,7 +443,7 @@
                     <span>a</span>
                     <span>s</span>
                 </h1>
-            <div class="grid-container" id="resenas">
+            <div class="grid-container" >
                 <div class="item1">
                     <div class="box">
                         <img src="/media/imgs/photos/z_review1_lucas.jpg"  width="40%"  alt="">
@@ -596,7 +597,7 @@
             </div>
             </section>    
             <!--  SECCION GALERIA  -->
-            <section class="gallery" id="">
+            <section class="gallery" id="galeria">
                 <h1 class="heading">
                     <span>G</span>
                     <span>a</span>
