Arreglo formaulario contacto

--- a/xtras/contacto.html
+++ b/xtras/contacto.html
@@ -114,13 +114,15 @@
                                     <input type="email" placeholder="Email" id="email" name="Email">
                                 </div>
                                 <div class="inputBox">
-                                    <input type="number" placeholder="Número tel." id="numero" name="numero>
+                                    <input type="number" placeholder="Número tel." id="numero" name="numero">
                                     <input type="text" placeholder="Tema consulta" id="tema" name="tema">
                                 </div>
                                 <textarea placeholder="Escriba aquí:" name="Consulta" id="consulta" cols="30" rows="10"></textarea>
-                                <input type="submit" class="btn" value="Enviar" id="submit" name="email">
+                                <br>
+                                <input type="submit" class="btn" value="Enviar" id="submit" name="email" >
                                 <input type="reset" class="btn" value="Reestablecer" id="reset" name="Reset">
                             </form>
+                            
                         </div>    
                     </div>
             </section>
